add export_hasher and import_hasher to the guts module
This was requested in https://github.com/BLAKE3-team/BLAKE3/issues/84.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,8 @@ jobs:
     - name: print instruction set support
       run: cargo run --quiet
       working-directory: ./tools/instruction_set_support
-    # Default tests plus Rayon.
-    - run: cargo test --features=rayon
+    # Default tests plus Rayon and Serde.
+    - run: cargo test --features=rayon,serde_derive
     # no_std tests.
     - run: cargo test --no-default-features
 
