--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,10 @@ std = ["digest/std"]
 # perform multi-threaded hashing. However, even if this feature is enabled, all
 # other APIs remain single-threaded.
 
+# Implements `serde::{Serialize, Deserialize}` for `ExportedHasher` in the
+# undocumented guts module. Most callers don't need this.
+serde_derive = ["serde", "serde_json", "arrayvec/serde"]
+
 # ---------- Features below this line are for internal testing only. ----------
 
 # By default on x86_64, this crate uses Samuel Neves' hand-written assembly
@@ -77,6 +81,8 @@ rayon = { version = "1.2.1", optional = true }
 cfg-if = "0.1.10"
 digest = "0.8.1"
 crypto-mac = "0.7.0"
+serde = { version = "1.0", features = ["derive"], optional = true }
+serde_json = { version = "1.0", optional = true }
 
 [dev-dependencies]
 hex = "0.4.2"
