Reduce branching in shaders

--- a/src/gpu/shaders/Makefile
+++ b/src/gpu/shaders/Makefile
@@ -1,10 +1,13 @@
 GLSLC=glslc
 
 .PHONY: all
-all: blake3.spv endian.spv
+all: blake3-chunk.spv blake3-parent.spv endian.spv
 
-blake3.spv: blake3.comp
-	$(GLSLC) -O -o $@ $<
+blake3-chunk.spv: blake3.comp
+	$(GLSLC) -DCHUNK -O -o $@ $<
+
+blake3-parent.spv: blake3.comp
+	$(GLSLC) -DPARENT -O -o $@ $<
 
 endian.spv: endian.comp
 	$(GLSLC) -O -o $@ $<
