Simplify shader endian conversion

--- a/src/gpu/shaders/Makefile
+++ b/src/gpu/shaders/Makefile
@@ -1,15 +1,15 @@
 GLSLC=glslc
 
 .PHONY: all
-all: blake3-chunk.spv blake3-parent.spv endian.spv
+all: blake3-chunk-be.spv blake3-chunk-le.spv blake3-parent.spv
 
-blake3-chunk.spv: blake3.comp
+blake3-chunk-be.spv: blake3.comp
+	$(GLSLC) -DCHUNK -DENDIAN -O -o $@ $<
+
+blake3-chunk-le.spv: blake3.comp
 	$(GLSLC) -DCHUNK -O -o $@ $<
 
 blake3-parent.spv: blake3.comp
 	$(GLSLC) -DPARENT -O -o $@ $<
-
-endian.spv: endian.comp
-	$(GLSLC) -O -o $@ $<
 
 .DELETE_ON_ERROR:
