enable clap default features
These are nice to have. I used to think this would increase build times,
but in practice it doesn't.

--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -16,7 +16,7 @@ pure = ["blake3/pure"]
 [dependencies]
 anyhow = "1.0.25"
 blake3 = { version = "0.3", path = "..", features = ["rayon"] }
-clap = { version = "2.33.0", default-features = false }
+clap = "2.33.1"
 hex = "0.4.0"
 memmap = "0.7.0"
 rayon = "1.2.1"
