--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,15 @@ std = ["digest/std"]
 # functions like `hash_rayon` and `update_rayon`. However, even if this feature
 # is enabled, all other APIs remain single-threaded.
 
+# This crate implements traits from the RustCrypto project, exposed here as the
+# "traits-preview" feature. However, these traits aren't stable, and they're
+# expected to change in incompatible ways before they reach 1.0. For that
+# reason, this crate makes no SemVer guarantees for this feature, and callers
+# who use it should expect breaking changes between patch versions of this
+# crate. (The "*-preview" feature name follows the conventions of the RustCrypto
+# "signature" crate.)
+traits-preview = ["digest", "crypto-mac"]
+
 # ---------- Features below this line are for internal testing only. ----------
 
 # By default on x86_64, this crate uses Samuel Neves' hand-written assembly
@@ -75,8 +84,8 @@ arrayvec = { version = "0.5.1", default-features = false, features = ["array-siz
 constant_time_eq = "0.1.5"
 rayon = { version = "1.2.1", optional = true }
 cfg-if = "1.0.0"
-digest = "0.9.0"
-crypto-mac = "0.10.0"
+digest = { version = "0.9.0", optional = true }
+crypto-mac = { version = "0.10.0", optional = true }
 
 [dev-dependencies]
 hex = "0.4.2"
