--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -21,6 +21,7 @@ hex = "0.4.0"
 memmap = "0.7.0"
 rayon = "1.2.1"
 wild = "2.0.3"
+crossbeam-channel = "0.5.0"
 
 [dev-dependencies]
 duct = "0.13.3"
