Add a nix setup using flake
Add a c build

Update build

Update staticLib C nix build

Fix nix CI

Add a headerFile to c build

Fix staticLib build

Add position independent shared lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,12 @@ no_neon = []
 # Document Hasher::update_rayon on docs.rs.
 features = ["rayon"]
 
+[workspace]
+# Needed since naersk does not detect local libs otherwise
+members = [
+  "reference_impl"
+]
+
 [dependencies]
 arrayref = "0.3.5"
 arrayvec = { version = "0.7.0", default-features = false }
