--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ readme = "README.md"
 edition = "2018"
 
 [features]
-default = ["std"]
+# XXX: DONT LAND THIS
+default = ["std", "rayon"]
 
 # The NEON implementation does not participate in dynamic feature detection,
 # which is currently x86-only. If "neon" is on, NEON support is assumed. Note
@@ -86,6 +87,8 @@ rayon = { version = "1.2.1", optional = true }
 cfg-if = "1.0.0"
 digest = { version = "0.9.0", optional = true }
 crypto-mac = { version = "0.11.0", optional = true }
+crossbeam-channel = "0.5.1"
+num_cpus = "1.13.0"
 
 [dev-dependencies]
 hex = "0.4.2"
