--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,7 @@ page_size = "0.4.1"
 rand = "0.8.0"
 rand_chacha = "0.3.0"
 reference_impl = { path = "./reference_impl" }
+hmac = "0.12.0"
 
 [build-dependencies]
 cc = "1.0.4"
