--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -18,7 +18,7 @@ anyhow = "1.0.25"
 blake3 = { version = "1", path = "..", features = ["rayon"] }
 clap = "3.0.5"
 hex = "0.4.0"
-memmap = "0.7.0"
+memmap2 = "0.5.3"
 rayon = "1.2.1"
 wild = "2.0.3"
 
