--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -278,8 +278,8 @@ jobs:
 
   # CMake build test (Library only), current macOS/Linux only.
   cmake_build:
-      name: CMake ${{ matrix.target.os }}
-      runs-on: ${{ matrix.target.os }}
+      name: CMake ${{ matrix.os }}
+      runs-on: ${{ matrix.os }}
       strategy:
         fail-fast: false
         matrix:
