--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,9 @@ std = ["digest/std"]
 # "signature" crate.)
 traits-preview = ["digest"]
 
-# ---------- Features below this line are for internal testing only. ----------
+# ---------- Features below this line are undocumented and unstable. ----------
+# The following features are mainly intended for testing and benchmarking, and
+# they might change or disappear at any time without a major version bump.
 
 # By default on x86_64, this crate uses Samuel Neves' hand-written assembly
 # implementations for SSE4.1, AVX2, and AVX512. (These provide both the best
@@ -64,7 +66,7 @@ prefer_intrinsics = []
 #
 # As noted above, these flags are *for testing only* and are not stable. It's
 # possible that some users might find that their particular use case performs
-# better if e.g. AVX-512 is disabled, because of issues like CPU downlocking.
+# better if e.g. AVX-512 is disabled, because of issues like CPU downclocking.
 # If that comes up, and if disabling the instruction set here at the feature
 # level turns out to be the right approach, then we can design a stable
 # feature. Until then, we reserve the right to break these features in a patch
