--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -240,7 +240,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: install TCC
-      run: apt-get install -y tcc
+      run: sudo apt-get install -y tcc
     - name: compile
       run: >
         tcc -shared -O3 -o libblake3.so \
