add the MSRV toolchain (currently 1.60.0) to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,20 @@ jobs:
           { "os": "windows-latest", "toolchain": "x86_64-pc-windows-msvc",   "name": "Windows MSVC" },
           { "os": "windows-latest", "toolchain": "x86_64-pc-windows-gnu",    "name": "Windows GNU" }
         ]
-        channel: [stable, beta, nightly]
+        channel: [
+          "stable",
+          "beta",
+          "nightly",
+          # The current MSRV. This crate doesn't have an official MSRV policy,
+          # but in practice we'll probably do what libc does:
+          # https://github.com/rust-lang/libs-team/issues/72.
+          # This test target is here so that we notice if we accidentally bump
+          # the MSRV, but it's not a promise that we won't bump it.
+          "1.60.0",
+        ]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: ${{ format('{0}-{1}', matrix.channel, matrix.target.toolchain) }}
@@ -140,7 +150,7 @@ jobs:
           - mips-unknown-linux-gnu
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
@@ -170,7 +180,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     # Test the intrinsics-based implementations.
     - run: make -f Makefile.testing test
       working-directory: ./c
@@ -222,7 +232,7 @@ jobs:
     strategy:
       fail-fast: false
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
@@ -238,7 +248,7 @@ jobs:
     name: build with the Tiny C Compiler
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - name: install TCC
       run: sudo apt-get install -y tcc
     - name: compile
