set CFLAGS in CI, including -Werror
These only affect the Makefile tests (which only run on Linux) since
-Werror currently fails on Windows and macOS.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,6 +178,8 @@ jobs:
   c_tests:
     name: C Makefile tests
     runs-on: ubuntu-latest
+    env:
+      CFLAGS: "-Wall -Wextra -pedantic -Werror -Wsign-conversion"
 
     steps:
     - uses: actions/checkout@v3
