--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ features = ["rayon"]
 [dependencies]
 arrayref = "0.3.5"
 arrayvec = { version = "0.7.4", default-features = false }
+atomic = { version = "0.5.3", default-features = false }
 constant_time_eq = "0.3.0"
 rayon = { version = "1.2.1", optional = true }
 cfg-if = "1.0.0"
