--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,9 +84,9 @@ zeroize = ["zeroize_crate", "arrayvec/zeroize"]
 features = ["rayon"]
 
 [dependencies]
-arrayref = "0.3.5"
 arrayvec = { version = "0.7.4", default-features = false }
 atomic = { version = "0.5.3", default-features = false }
+blake3_guts = { path = "rust/blake3_guts" }
 constant_time_eq = "0.3.0"
 rayon = { version = "1.2.1", optional = true }
 cfg-if = "1.0.0"
