update constant_time_eq to v0.3.0
This bumps the MSRV of both `blake3` and `b3sum` to 1.66.1.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           # https://github.com/rust-lang/libs-team/issues/72.
           # This test target is here so that we notice if we accidentally bump
           # the MSRV, but it's not a promise that we won't bump it.
-          "1.60.0",
+          "1.66.1",
         ]
 
     steps:
@@ -145,10 +145,10 @@ jobs:
           "stable",
           "beta",
           "nightly",
-          # The b3sum MSRV is typically higher than the blake3 crate's, because
+          # The b3sum MSRV is sometimes higher than the blake3 crate's, because
           # b3sum depends on Clap. We check in the b3sum Cargo.lock, so Clap
           # update shouldn't randomly break us here.
-          "1.64.0",
+          "1.66.1",
         ]
 
     steps:
