--- a/rust/guts/Cargo.toml
+++ b/rust/guts/Cargo.toml
@@ -15,3 +15,10 @@ cfg-if = "1.0.0"
 [dev-dependencies]
 hex = "0.4.3"
 reference_impl = { path = "../../reference_impl" }
+
+[features]
+default = ["std"]
+std = []
+
+[build-dependencies]
+cc = "1.0.79"
